* 支持语法高亮

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- import vendor styles -->
     <link rel="stylesheet" href="vendor/blog.css">
     <link rel="stylesheet" href="vendor/github-markdown.css">
+    <!-- code highlight css-->
+    <link rel="stylesheet" href="vendor/highlight/styles/github.css">
 </head>
 
 <body>
@@ -35,5 +37,8 @@
 <script src="vendor/jquery-1.11.1.min.js"></script>
 <script src="vendor/marked-0.3.2.min.js"></script>
 <script src="vendor/blog.js"></script>
+
+<!-- code highlight-->
+<script src="vendor/highlight/highlight.pack.js"></script>
 
 </html>
