加入导航动画
Signed-off-by: Jayin Ton <tonjayin@gmail.com>

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 <script src="vendor/jquery-1.11.1.min.js"></script>
 <script src="vendor/marked-0.3.2.min.js"></script>
 <script src="vendor/blog.js"></script>
+<!-- 可选的动画 -->
+<script src="vendor/anim.js"></script>
 
 <!-- code highlight-->
 <script src="vendor/highlight/highlight.pack.js"></script>
